Fix card spacing for Chrome client.

--- a/examples/Sports/shared.css
+++ b/examples/Sports/shared.css
@@ -10,7 +10,7 @@
   font-size: 15px;
   color: white;
   display: block;
-  padding-top: 3%;
+  padding-top: 5px;
 }
 .tbml-match {
   font-family: "SourceSansPro";
@@ -69,7 +69,7 @@
   display: flex;
   width: 100%;
   margin: auto;
-  padding-bottom: 10%;
+  padding-bottom: 20px;
   align-self: center;
 }
 .left-column{
@@ -97,8 +97,8 @@
 .top-section {
   display: flex;
   flex-direction: row;
-  padding: 5%;
-  margin-bottom: 30%;
+  padding: 10px;
+  margin-bottom: 5px;
 }
 .local-time {
   font-family: "SourceSansPro";
@@ -117,7 +117,7 @@
 .white-line {
   border: 5% solid white;
   width: -webkit-fill-available;
-  margin-bottom: 3%;
+  margin-bottom: 5px;
 }
 .redeemed {
   color: #cffFAB;
